# HealthyGamerSearchEngine

./: .dockerignore  .env  .env.example  .eslintrc.cjs  README.md  db.sqlite3  docker-compose.yml  dockerfile  manage.py  nixpacks.toml  package-lock.json  package.json  pyproject.toml  start-database.sh
api/: querying_embeddings.py  urls.py  views.py
authentication/: urls.py  views.py
data/healthy_gamer_embeddings.db/: chroma.sqlite3
frontend/: _metadata.json  deno.json  import_map.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.js
frontend/src/: App.css  App.tsx  firebase.ts  index.css  index.tsx  main.ts  main.tsx  requests.ts
frontend/src/components/: Background.module.scss  Background.tsx  Button.module.scss  HeroHeader.module.scss  HeroHeader.scss  HeroHeader.tsx  Logo.tsx  Logo2.tsx  NavBar.module.scss  Navbar.tsx  SearchIcon.tsx  StarRating.tsx  Videos.module.scss  Videos.tsx
hgg-searchengine/: asgi.py  settings.py  urls.py  wsgi.py
hgg_searchengine/: asgi.py  settings.py  urls.py  wsgi.py
nextjs/: .eslintrc.cjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
nextjs/prisma/: schema.prisma
nextjs/public/: index.html
nextjs/src/: env.js
nextjs/src/app/: page.tsx
nextjs/src/heroSection/: HeroSection.tsx
nextjs/src/styles/: tailwind.config.ts  theme.ts
nextjs/src/test/: results.json
src/: env.js
src/app/_components/: AboutSection.tsx
src/app/_icons/: Logo2.tsx
src/contactSection/: ContactSection.tsx
src/server/api/: root.ts  (+1 more)
src/styles/: globals.css
(+55 files in other folders)
