[tool.poetry]
name = "healthygamersearchengine"
version = "0.1.0"
description = ""
authors = ["lil-sussy <naykeysnet@gmail.com>"]
readme = "README.md"

[tool.poetry.packages]
include = []

[tool.poetry.dependencies]
python = "==3.12.2"
django = "^5.0.4"
djangorestframework = "^3.15.1"
requests = "^2.31.0"
chromadb = "^0.5.0"
firebase-admin = "^6.5.0"
pytube = "^15.0.0"
nltk = "^3.8.1"
colorlog = "^6.8.2"
yake = "^0.4.8"


[tool.poetry.group.dev.dependencies]
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
